--- a/Buff.ipynb
+++ b/Buff.ipynb
@@ -6,7 +6,7 @@
       "name": "Buff.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO82X2TjifPpV+baQiUATWX",
+      "authorship_tag": "ABX9TyMM/W1+IC5h9PG4Lj2rPJOw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -192,16 +192,16 @@
       "metadata": {
         "id": "GhxBT9LfVMNK",
         "colab_type": "code",
-        "outputId": "21989647-9202-42db-e5c0-3428287d68c9",
+        "outputId": "c8c27c6d-7cfb-4269-df99-1006bfdf1072",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 206
         }
       },
       "source": [
         "df_buffalo.tail()"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +319,7 @@
       "metadata": {
         "id": "Ze1HOlsBWrwU",
         "colab_type": "code",
-        "outputId": "e9edca15-e3a3-4695-9291-300c5d3e044e",
+        "outputId": "f6a861ef-3151-44ae-9e69-b8c3d5f058e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -328,7 +328,7 @@
       "source": [
         "df_update"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +473,7 @@
       "metadata": {
         "id": "KjTrFCWkXczk",
         "colab_type": "code",
-        "outputId": "8aececcc-8e6a-4d3e-997c-2f03976cf5cb",
+        "outputId": "9408931a-d13a-4e88-ce11-8def0b123a24",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -482,7 +482,7 @@
       "source": [
         "df_update"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1191,10 +1191,10 @@
       "metadata": {
         "id": "D1Zu86e1Y4Ct",
         "colab_type": "code",
-        "outputId": "85be0dff-3cde-4131-aaf7-70a40cef01ca",
+        "outputId": "04ae449a-3813-464b-e966-23edb368db04",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 52
         }
       },
       "source": [
@@ -1218,7 +1218,7 @@
         "print('Folium installed')\n",
         "print('Libraries imported.')"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1235,10 +1235,10 @@
       "metadata": {
         "id": "whtsu9PzXe_E",
         "colab_type": "code",
-        "outputId": "97cb4abe-0363-45db-8b65-930b95a0bd37",
+        "outputId": "c0e6985a-0331-4980-b598-e3e026c1e7d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 71
+          "height": 69
         }
       },
       "source": [
@@ -1250,7 +1250,7 @@
         "print('CLIENT_ID: ' + CLIENT_ID)\n",
         "print('CLIENT_SECRET:' + CLIENT_SECRET)"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1268,16 +1268,16 @@
       "metadata": {
         "id": "MPT_uirHZH9H",
         "colab_type": "code",
-        "outputId": "1f71a7bd-fc01-48fb-a686-be0402166ad3",
+        "outputId": "2d9b0c98-8424-431d-ce2a-3312a27db937",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 73
+          "height": 72
         }
       },
       "source": [
         "geolocator=Nominatim()"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1292,72 +1292,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bkM3cGEp-Skr",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "location = geolocator.geocode(\"14004\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zS2hCc3u-ePH",
-        "colab_type": "code",
-        "outputId": "e519e672-64cc-47ee-f99c-ba2187c20d2d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "print(location)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Distrito Centro, Córdoba, Andalucía, 14004, España\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "imTuSrCl-j6s",
-        "colab_type": "code",
-        "outputId": "c5bbae82-4c89-47cd-e896-fc8eb0000887",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "print((location.latitude, location.longitude))"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(37.87832856956522, -4.784959373913045)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "qQT8hcVaBAFt",
         "colab_type": "code",
-        "outputId": "0a93a41e-5875-4c9c-a30b-e293d592cfe1",
+        "outputId": "3c164617-ea95-4d30-8cfe-1ba2242e7ae0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1366,7 +1303,7 @@
       "source": [
         "df_update['Zip Codes'].tolist()"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1487,7 +1424,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 18
         }
       ]
     },
@@ -1501,7 +1438,7 @@
       "source": [
         "coordinates=[]\n",
         "for k in df_update['Zip Codes'].tolist():\n",
-        "  location=geolocator.geocode(k)\n",
+        "  location=geolocator.geocode({'postalcodes':k, 'country': 'United States'})\n",
         "  coordinates.append([location.latitude, location.longitude])\n"
       ],
       "execution_count": 0,
@@ -1512,136 +1449,137 @@
       "metadata": {
         "id": "glvEloVZAhGl",
         "colab_type": "code",
-        "outputId": "9db521f1-dbff-4424-af73-44d40bcb3e76",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "20372ed0-59a1-45ad-da5a-ac1352eed822"
       },
       "source": [
         "coordinates"
       ],
-      "execution_count": 0,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[[37.892388, -4.777060567873564],\n",
-              " [37.87832856956522, -4.784959373913045],\n",
-              " [37.894652845766544, -4.78246331779557],\n",
-              " [37.88630825, -4.78292373],\n",
-              " [37.88485575, -4.7590301],\n",
-              " [37.90860651887702, -4.79180746558671],\n",
-              " [45.005896, 8.1144501],\n",
-              " [51.52161575, 31.22137591180425],\n",
-              " [51.50923070130057, 31.322255673722378],\n",
-              " [12.122941452981303, -86.25657704250453],\n",
-              " [44.91424552882834, 8.307023783085674],\n",
-              " [45.00019476129589, 8.282056977443112],\n",
-              " [12.123685669303192, -86.25932388917204],\n",
-              " [49.20552706070915, -0.35579411731870875],\n",
-              " [12.119486321204676, -86.26131249568519],\n",
-              " [12.119648633307577, -86.2646552463097],\n",
-              " [12.117235855717462, -86.27200093015534],\n",
-              " [44.795755618974226, 8.401813488053572],\n",
-              " [42.713189, -78.9727375],\n",
-              " [44.662653500000005, 8.29990699342404],\n",
-              " [52.51565386622463, 13.256766789446633],\n",
-              " [52.50348215395873, 13.249422640276649],\n",
-              " [52.5071105601912, 13.28925398723969],\n",
-              " [52.51601763740819, 13.289339655953345],\n",
-              " [49.20159121594805, -0.3884225283064132],\n",
-              " [43.20288214099235, -78.57024096396617],\n",
-              " [43.02451655689202, -78.75245150967464],\n",
-              " [42.5975379, -78.6524573],\n",
-              " [43.014785403915575, -78.95871541015407],\n",
-              " [42.735993576923974, -78.83864373211267],\n",
-              " [42.63828418252403, -78.53096990777435],\n",
-              " [42.72339681268438, -78.93218846335729],\n",
-              " [42.89807498128025, -78.65773090742441],\n",
-              " [42.54295382766009, -78.89607314035312],\n",
-              " [43.1668835, -79.0452094],\n",
-              " [43.15933419277367, -78.70142440995448],\n",
-              " [43.17089634569557, -78.68790948264447],\n",
-              " [54.57849988615662, 25.26427982399914],\n",
-              " [37.37856471169905, 126.96862671492575],\n",
-              " [37.378243730631105, 126.96096433899905],\n",
-              " [43.27834788056979, -78.7063196596915],\n",
-              " [52.3959151, 13.1604552],\n",
-              " [48.86376731067329, -0.5562277531826673],\n",
-              " [49.156925, -0.3928318414634152],\n",
-              " [49.234346, -0.3250325732403292],\n",
-              " [49.167346603109586, -0.30964343617563295],\n",
-              " [43.3366562241211, -78.72316721977052],\n",
-              " [42.7592191, -78.7479722],\n",
-              " [43.231916353415706, -78.91947550809229],\n",
-              " [43.14587915824619, -78.87575365136188],\n",
-              " [42.536558004496264, -78.51546982089876],\n",
-              " [42.704948036536, -78.57003142215824],\n",
-              " [49.0481528, 0.24175842228795508],\n",
-              " [42.512228181911475, -78.68059591510881],\n",
-              " [48.9200391, 13.7765853],\n",
-              " [49.283956, -0.2604929],\n",
-              " [12.1116575, -86.2354397],\n",
-              " [52.4520157, 13.2602456],\n",
-              " [48.9872387, -0.0564971652932734],\n",
-              " [12.107919218814706, -86.27001170163383],\n",
-              " [12.103722682344698, -86.26503669984437],\n",
-              " [42.896514, -78.879825],\n",
-              " [42.884639, -78.8753584],\n",
-              " [42.88482420974155, -78.87045466566772],\n",
-              " [42.880764791894315, -78.86268661687893],\n",
-              " [54.76675274484562, 25.027022968030163],\n",
-              " [42.8779749, -78.8014475],\n",
-              " [42.9372195, -78.8906416],\n",
-              " [42.914263668451134, -78.84941431408726],\n",
-              " [42.8768863, -78.8772493],\n",
-              " [49.099032986514686, -0.5057071908216199],\n",
-              " [42.908392834623, -78.82264375869232],\n",
-              " [42.89389491457024, -78.8198222917003],\n",
-              " [42.91581757125749, -78.89001024178951],\n",
-              " [42.94002903458787, -78.84030104051418],\n",
-              " [24.6884422, 46.7788202],\n",
-              " [42.948165302341735, -78.85585986796981],\n",
-              " [42.969413721981994, -78.8754536000441],\n",
-              " [42.8254229, -78.8506509],\n",
-              " [42.78604147331728, -78.82731013885679],\n",
-              " [49.0006489, -0.44227514883333185],\n",
-              " [42.98019498921358, -78.73874779067215],\n",
-              " [42.9333635, -78.8744311],\n",
-              " [42.97162546288958, -78.84514299458893],\n",
-              " [42.8350168, -78.77043194963804],\n",
-              " [37.48890010357364, 126.86846782292544],\n",
-              " [42.96506964437891, -78.79667702460765],\n",
-              " [42.87968675715741, -78.74471688170706],\n",
-              " [43.0071495, -78.8085471],\n",
-              " [38.0421932, 23.751788392995266],\n",
-              " [40.455477514815676, -80.0163190175013],\n",
-              " [49.105613631424944, -0.7757532281747083],\n",
-              " [12.097189196718762, -86.24430294250416],\n",
-              " [49.016571600000006, -0.6776289084202252],\n",
-              " [42.99875148648649, -78.79147656756757],\n",
-              " [59.22427855, 18.141715900000005],\n",
-              " [59.23279835043344, 18.164673810214534],\n",
-              " [54.803753479429176, 25.242317234530873],\n",
-              " [19.2920417, -99.1838438],\n",
-              " [54.8074016593434, 25.35579770229807],\n",
-              " [49.07469275, -0.04058320592838942],\n",
-              " [62.0129665, 23.3957943],\n",
-              " [19.2638479, -99.2286299],\n",
-              " [19.2607853, -99.1973918],\n",
-              " [49.216272000000004, -0.4024834183673506],\n",
-              " [12.077125431559288, -86.24782047443075],\n",
-              " [43.09360839089826, -79.04956454928488],\n",
-              " [43.08660646766304, -79.04322911761811],\n",
-              " [43.0843272, -79.063794],\n",
-              " [43.109555, -79.054366]]"
+              "[[39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825],\n",
+              " [39.7837304, -100.4458825]]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 20
         }
       ]
     },
