--- a/Buffalo_Final_Capstone.ipynb
+++ b/Buffalo_Final_Capstone.ipynb
@@ -5,7 +5,10 @@
     "colab": {
       "name": "Buffalo Final Capstone.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "mount_file_id": "1EM31yFOlJ0cvzSsBFjxgbFVgqPLOMbzd",
+      "authorship_tag": "ABX9TyOzPSYXI3cNYyGjaYKMZtFQ",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ibrahin12/Coursera_Capstone/blob/master/Buffalo_Final_Capstone.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -240,7 +253,7 @@
       "source": [
         "df_buffalo.tail()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +380,7 @@
       "source": [
         "df_update"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -531,7 +544,7 @@
       "source": [
         "df_update"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1277,7 +1290,7 @@
         "print('Folium installed')\n",
         "print('Libraries imported.')"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1321,7 +1334,7 @@
         "print('CLIENT_ID: ' + CLIENT_ID)\n",
         "print('CLIENT_SECRET:' + CLIENT_SECRET)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1348,7 +1361,7 @@
       "source": [
         "geolocator=Nominatim()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1374,7 +1387,7 @@
       "source": [
         "df_update['Zip Codes'].tolist()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1536,7 +1549,7 @@
       "source": [
         "buff_coordinates.head()\n"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1630,7 +1643,7 @@
       "source": [
         "buff_coordinates.columns"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1738,7 +1751,7 @@
       "source": [
         "buffalo_venues"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12119,7 +12132,7 @@
         "\n",
         "buffalo_onehot.head()"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12684,7 +12697,7 @@
       "source": [
         "buffalo_onehot.shape"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12725,7 +12738,7 @@
         "buffalo_grouped = buffalo_onehot.groupby('Zipcode').mean().reset_index()\n",
         "buffalo_grouped"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -20855,7 +20868,7 @@
       "source": [
         "buffalo_grouped.shape"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -20906,7 +20919,7 @@
         "    print(temp.sort_values('freq', ascending=False).reset_index(drop=True).head(num_top_venues))\n",
         "    print('\\n')"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -21728,7 +21741,7 @@
         "\n",
         "neighborhoods_venues_sorted.head()"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -21906,7 +21919,7 @@
         "# check cluster labels generated for each row in the dataframe\n",
         "kmeans.labels_[0:10] "
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -21940,7 +21953,7 @@
         "buffalo_merged = buffalo_merged.join(neighborhoods_venues_sorted.set_index('Zipcode'), on='Zipcode')\n",
         "buffalo_merged.head()"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -22102,7 +22115,7 @@
       "source": [
         "buffalo_merged"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -24227,7 +24240,7 @@
         "       \n",
         "map_clusters"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -24286,7 +24299,7 @@
         "\n",
         "print('Folium installed and imported!')"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -24315,7 +24328,7 @@
         "# display world map\n",
         "world_map"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -24352,7 +24365,7 @@
         "# display world map\n",
         "world_map"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -24414,7 +24427,7 @@
       "source": [
         "df_buffalo_map"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -24842,7 +24855,7 @@
       "source": [
         "df_buffalo_map.shape"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -24898,7 +24911,7 @@
         "# add densities to map\n",
         "buffalo_map_features.add_child(buffalo_map_features)"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -24996,7 +25009,7 @@
         "# show map\n",
         "buffalo_map"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
